@@ -1,3 +1,4 @@
+ - Add A[i][j] index operator for quick access to dense matrix
 0.3.7
  - Add new Matlab-like syntax like A(i,all) = x or A(3,all) = A(4,all)
  - Add dolfin_assert() macro enabled if debug is defined
